--- a/index01.html
+++ b/index01.html
@@ -8,14 +8,11 @@
   </head>
   <body>
     <div class="main">
-      <div class="main__column"><img src="images/main02.webp" /></div>
       <div class="main__column">
-        <div class="banner js-banner">
-          <div class="banner__title">Palette</div>
-          <div class="banner__desc">Go get some colors and enjoy</div>
-          <button class="banner__btn js-pickBtn">Pick up</button>
-        </div>
-        <div class="card-list js-list">
+        <img class="filter" src="images/main02.webp" />
+      </div>
+      <div class="main__column">
+        <div class="card-list" style="display: grid">
           <div class="card">
             <div class="card__img">
               <a href="board01.html"> <img src="images/life.jpeg" /></a>
@@ -47,6 +44,5 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
