--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="main__column"><img src="images/main02.webp" /></div>
+      <div class="main__column"><img src="images/main.webp" /></div>
       <div class="main__column">
         <div class="banner js-banner">
           <div class="banner__title">Palette</div>
