--- a/index01.html
+++ b/index01.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main">
       <div class="main__column">
-        <img class="filter" src="images/main02.webp" />
+        <img class="filter" src="images/main.webp" />
       </div>
       <div class="main__column">
         <div class="card-list" style="display: grid">
